--- a/.github/workflows/benchmark-unity.yml
+++ b/.github/workflows/benchmark-unity.yml
@@ -23,6 +23,10 @@ jobs:
           10.x.x
           5.x.x
 
+    - name: Install dependencies
+      run: |
+        sudo apt-get update && sudo apt-get install -y libssl-dev
+
     - name: Run benchmark
       run: |
         # embed latest content to src/
