--- a/.github/workflows/benchmark-unity.yml
+++ b/.github/workflows/benchmark-unity.yml
@@ -27,9 +27,10 @@ jobs:
       run: |
         sudo apt-get update && sudo apt-get install -y libssl-dev
 
-    - name: Run benchmark
+    - name: Embed resources
       run: |
-        # embed latest content to src/
         dotnet run --project ./embedded  -f net8.0 -- --force --quiet
 
+    - name: Run benchmark
+      run: |
         dotnet run --project ./sample  -c Release -f ${{ env.target }} -- --benchmark --short-run
