fix: specify output file name explicitly

--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 9.x.x  # 2025.10.17: .NET 10 RC2 seems that it does not pack package correctly
+        dotnet-version: 10.x.x
 
     - name: Embed resources
       run: |
