--- a/src/Jsonable.csproj
+++ b/src/Jsonable.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <AssemblyName>SatorImaging.$(MSBuildProjectName)</AssemblyName>
+  </PropertyGroup>
+
   <!-- minimal requirements for roslyn development -->
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
