--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -18,15 +18,21 @@ jobs:
       run: |
         dotnet run --project ./embedded  -f net8.0 -- --force --quiet
 
-    - name: Test (release)
-      run: |
-        dotnet run --project ./sample  -f net9.0 -c Release
-
     - name: Pack (release)
       run: |
         dotnet build -c Release -p:ContinuousIntegrationBuild=true
-        dotnet pack ./src  -c Release -p:ContinuousIntegrationBuild=true
-        dotnet pack ./assertion  -c Release -p:ContinuousIntegrationBuild=true
+
+        cd ./src
+        dotnet pack  -c Release -p:ContinuousIntegrationBuild=true
+        cd ..
+
+        cd ./assertion
+        dotnet pack  -c Release -p:ContinuousIntegrationBuild=true
+        cd ..
+
+    - name: Test (release)
+      run: |
+        dotnet run --project ./sample  -f net9.0 -c Release
 
     ################################
     #  NUGET
