--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGetPublishSettings">
-    <NuGetPublishVersion>0.1.0</NuGetPublishVersion>
-    <NuGetPublishVersionSuffix>-rc.1</NuGetPublishVersionSuffix>
+    <NuGetPublishVersion>1.0.0</NuGetPublishVersion>
+    <NuGetPublishVersionSuffix></NuGetPublishVersionSuffix>
     <!-- relative path from .csproj files, without trailing slash -->
     <NuGetPublishProjectRootRelPath>..</NuGetPublishProjectRootRelPath>
     <NuGetPublishIconFile>icon-128px.png</NuGetPublishIconFile>
