--- a/tests/Tests.csproj
+++ b/tests/Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>Sample</AssemblyName>
+    <AssemblyName>Tests</AssemblyName>
 
     <OutputType>Exe</OutputType>
     <!-- MessagePack for C# doesn't work on .NET 10
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FUnit" Version="0.5.0-rc.1" />
+    <PackageReference Include="FUnit" Version="0.6.0" />
 
     <PackageReference Include="BenchmarkDotNet" Version="0.15.4" />
     <PackageReference Include="MessagePack" Version="3.1.4" />
