--- a/assertion/Jsonable.Assertions.csproj
+++ b/assertion/Jsonable.Assertions.csproj
@@ -15,7 +15,7 @@
     -->
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 
-    <PackageReference Include="FUnit" Version="0.6.0" />
+    <PackageReference Include="FUnit" Version="*" />
 
     <PackageReference Include="SatorImaging.PragmaAnalyzer" Version="1.1.0">
       <PrivateAssets>all</PrivateAssets>
